Actions implementation - edit asset